deps/chakrashim/core/test/es6/globalCatchNewTargetSyntaxError.baseline
SyntaxError: Invalid use of the 'new.target' keyword
	at code (globalCatchNewTargetSyntaxError.js:6:34)
