deps/chakrashim/core/test/es6/globalCatchNewTargetSyntaxError.js
//-------------------------------------------------------------------------------------------------------
// Copyright (C) Microsoft. All rights reserved.
// Licensed under the MIT license. See LICENSE.txt file in the project root for full license information.
//-------------------------------------------------------------------------------------------------------

try { throw Error;} catch(e){new.target;}
